apps/api/.k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mock-servicenow-api-svc
  labels:
    app: mock-servicenow-api
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: mock-servicenow-api
